dev: Swagger for AttendeeController.
